<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bridge Score Calc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="btn0">Continue</string>
     <string name="txt1">Table :</string>
     <string name="txt2">Boards per Table :</string>
     <string name="txt3">Your team :</string>
     <string name="rd1">NS</string>
     <string name="rd2">EW</string>
     <string name="bt1">Next</string>
     <string name="dtxt1">Bid NO :</string>
     <string name="dtxt2">Bid Suit :</string>
     <string name="dtxt3">D/RD/N :</string>
     <string name="drd1">None </string>
     <string name="drd2">X </string>
     <string name="drd3">XX </string>
      <string name="dtxt4">Vulnerable :</string>
   
     <string name="drd4">Yes </string>
     <string name="drd5">No </string>
        <string name="dtxt5">Declarer :</string>
      <string name="drd7"> Yes </string>
       <string name="drd8"> No </string>
       <string name="dtxt6"> Tricks Won : </string>
       <string name="dbt1"> Calculate  </string>
        <string name="scrf"> Your Score :  </string>
        <string name="congo"> Congratulation!!!  </string>
         <string name="comp"> Completed  </string>
         <string name="scrfbtn1"> Send to server  </string>
         <string name="scrfbtn2"> Finish  </string>
</resources>