<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/black">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congo"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@android:color/white"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/comp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
   

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scrf"
        android:textAppearance="?android:attr/textAppearanceMedium" 
       android:textColor="@android:color/white" 
       android:layout_marginTop="40dp"/>

   
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

 </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scrfbtn1" 
            android:width="140dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:onClick="edit"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scrfbtn2" 
             android:width="100dp"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="40dp"
             android:onClick="ex"
             android:textColor="@android:color/white"/> 

    </LinearLayout>

</LinearLayout>